CPP Function 1-7 https://blog.csdn.net/weixin_42411044/article/details/85758783

--- a/CppFunction_selftest/CppFunction_selftest.vcxproj
+++ b/CppFunction_selftest/CppFunction_selftest.vcxproj
@@ -123,6 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Dm1.cpp" />
+    <ClCompile Include="Dm2.cpp" />
+    <ClCompile Include="Dm3.cpp" />
+    <ClCompile Include="Dm4.cpp" />
+    <ClCompile Include="Dm5.cpp" />
+    <ClCompile Include="Dm6.cpp" />
+    <ClCompile Include="Dm7.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
